03-airgap-zone/manifests/traefik/13-alertmanager-ingressroute.yaml
# AlertManager IngressRoute

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-http
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`alertmanager.airgap.local`)
      kind: Rule
      services:
        - name: alertmanager
          port: 9093
      middlewares:
        - name: https-redirect
          namespace: traefik

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-https
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.airgap.local`)
      kind: Rule
      services:
        - name: alertmanager
          port: 9093
      middlewares:
        - name: security-headers
          namespace: traefik
  tls:
    secretName: airgap-tls
